--- a/.cproject
+++ b/.cproject
@@ -36,6 +36,7 @@
 									<listOptionValue builtIn="false" value="../Core/Src/hardware"/>
 									<listOptionValue builtIn="false" value="../Core/Src/tasks"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/queues"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/Mutexes"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1378310240" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -59,6 +60,7 @@
 									<listOptionValue builtIn="false" value="../Core/Inc/hardware"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/tasks"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/queues"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/Mutexes"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.2075156013" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -76,9 +78,8 @@
 									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/hardware"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/tasks"/>
-									<listOptionValue builtIn="false" value="../Core/Src/hardware"/>
-									<listOptionValue builtIn="false" value="../Core/Src/tasks"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/queues"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/Mutexes"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.definedsymbols.1094655190" name="Define symbols (-D)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.definedsymbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="DEBUG"/>
@@ -153,6 +154,7 @@
 									<listOptionValue builtIn="false" value="../Core/Src/hardware"/>
 									<listOptionValue builtIn="false" value="../Core/Src/tasks"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/queues"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/Mutexes"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1152812171" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -177,6 +179,7 @@
 									<listOptionValue builtIn="false" value="../Core/Src/hardware"/>
 									<listOptionValue builtIn="false" value="../Core/Src/tasks"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/queues"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/Mutexes"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1910390746" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -197,6 +200,7 @@
 									<listOptionValue builtIn="false" value="../Core/Src/hardware"/>
 									<listOptionValue builtIn="false" value="../Core/Src/tasks"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/queues"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/Mutexes"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.definedsymbols.1889705034" name="Define symbols (-D)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.definedsymbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="USE_HAL_DRIVER"/>
